--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,4 +1,4 @@
 [workspace]
 resolver = "2"
 members = ["xtask"]
-exclude = ["esp-metadata", "esp-riscv-rt", "examples"]
+exclude = ["esp-riscv-rt", "examples"]
