--- a/examples/.cargo/config.toml
+++ b/examples/.cargo/config.toml
@@ -1,5 +1,5 @@
 [alias]
-esp32   = "run --release --features=esp32   --target=xtensa-esp32-none-elf"
+esp32 = "run --release --features=esp32   --target=xtensa-esp32-none-elf"
 esp32c2 = "run --release --features=esp32c2 --target=riscv32imc-unknown-none-elf"
 esp32c3 = "run --release --features=esp32c3 --target=riscv32imc-unknown-none-elf"
 esp32c6 = "run --release --features=esp32c6 --target=riscv32imac-unknown-none-elf"
@@ -7,19 +7,21 @@ esp32h2 = "run --release --features=esp32h2 --target=riscv32imac-unknown-none-el
 esp32s2 = "run --release --features=esp32s2 --target=xtensa-esp32s2-none-elf"
 esp32s3 = "run --release --features=esp32s3 --target=xtensa-esp32s3-none-elf"
 
+[build]
+target = "riscv32imc-unknown-none-elf"
+
 [target.'cfg(target_arch = "riscv32")']
-runner    = "espflash flash --monitor"
-rustflags = [
-  "-C", "link-arg=-Tlinkall.x",
-  "-C", "force-frame-pointers",
-]
+runner = "espflash flash --monitor"
+rustflags = ["-C", "link-arg=-Tlinkall.x", "-C", "force-frame-pointers"]
 
 [target.'cfg(target_arch = "xtensa")']
-runner    = "espflash flash --monitor"
+runner = "espflash flash --monitor"
 rustflags = [
   # GNU LD
-  "-C", "link-arg=-Wl,-Tlinkall.x",
-  "-C", "link-arg=-nostartfiles",
+  "-C",
+  "link-arg=-Wl,-Tlinkall.x",
+  "-C",
+  "link-arg=-nostartfiles",
 
   # LLD
   # "-C", "link-arg=-Tlinkall.x",
